--- a/media/static/css/style.css
+++ b/media/static/css/style.css
@@ -4,9 +4,8 @@
 body { background: #fff; color: #000; font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; font-size:16px; height: 100%; line-height: 1.4em; width: 100%; }
 
 h1, h2, h3, h4, h5 { color:#000; font-family:Georgia; }
-h1{ font-size: 32px; }
 h2, h3, h4, h5 { margin: 1em 0 0.2em; font-weight: bold; }
-h2 { margin: 0.25em 0 .2em; font-size: 1.8em; letter-spacing: -0.025em; line-height: 1.2em; font-weight: 400; }
+h1, h2 { color:#334455; margin: 0.25em 0 .2em; font-size: 1.8em; letter-spacing: -0.025em; line-height: 1.2em; font-weight: 400; }
 h3 { font-size: 1em; margin-bottom: 0.25em; }
 h4 { font-size: 15px; }
 p, ul, ol, pre { font-size: 1em; margin: 0 0 0.6em; }
