--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
     </div>
     <div id="sd">
       <ul>
-      	<li><a href="{{ BLOG_SETTINGS.rss_url }}" title"Subscribe via RSS">RSS</a></li>
+      	<li><a href="{{ BLOG_SETTINGS.rss_url }}" title"Subscribe via RSS">Subscribe via RSS</a></li>
         <li><a href="{{ BLOG_SETTINGS.twitter_url }}" title="Follow me on Twitter">Follow me on Twitter</a></li>
       </ul>
 
