--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
 
 		{% cache 7200 "base.archive" %}
 		{% get_post_archive as dates %}
-		<h4>{% trans "Archive" %}</h4>
+		<h4>{% trans "Blog Archive" %}</h4>
 		<ul class="archive">
 		{% for date in dates %}
 		<li><a href="{% url blog_archive_month date|date:"Y", date|date:"b" %}" title="{{ date|date:"F Y" }}">{{ date|date:"F Y" }}</a></li>
