--- a/templates/blog/category_detail.html
+++ b/templates/blog/category_detail.html
@@ -3,14 +3,13 @@
 
 
 {% block title %}{% trans "Posts for" %} {{ category.title }} | {{ block.super }}{% endblock %}
-{% block body_class %}{{ block.super }} category_detail{% endblock %}
-{% block body_id %}category_{{ category.id }}{% endblock %}
+{% block body_class %}{{ block.super }} category-detail{% endblock %}
+{% block body_id %}category-{{ category.id }}{% endblock %}
 
 {% block content %}
+<h1 class="filter-title">{% trans "Posts for" %} {{ category.title }}</h1>
 
-<h2 class="filter-title">{% trans "Posts for" %} {{ category.title }}</h2>
-
-  <div class="post_list">
+  <div class="post-list">
   {% cache 3600 "blog.category_detail.object_list" category.title %}
     {% for post in object_list %}
   {% include "blog/includes/post_list.html" %}
