--- a/templates/blog/category_list.html
+++ b/templates/blog/category_list.html
@@ -2,13 +2,12 @@
 {% load i18n %}
 
 {% block title %}Post categories{% endblock %}
-{% block body_class %}{{ block.super }} category_list{% endblock %}
+{% block body_class %}{{ block.super }} category-list{% endblock %}
 
 {% block content %}
+<h1 class="filter-title">{% trans "Posts categories" %}</h1>
 
-<h2 class="filter-title">{% trans "Posts categories" %}</h2>
-
-  <div class="post_list">
+  <div class="post-list">
     {% for category in object_list %}
     <li><a href="{{ category.get_absolute_url }}">{{ category }}</a></li>
     {% endfor %}
