--- a/templates/blog/post_archive_month.html
+++ b/templates/blog/post_archive_month.html
@@ -1,17 +1,14 @@
 {% extends "blog/base_blog.html" %}
 {% load cache i18n %}
 
-{% block body_class %}{{ block.super }} category_detail{% endblock %}
-{% block body_id %}category_{{ category.id }}{% endblock %}
+{% block body_class %}{{ block.super }} category-detail{% endblock %}
+{% block body_id %}category-{{ category.id }}{% endblock %}
 
 {% block content %}
-
-<h2 class="filter-title">{% trans "Posts for" %} {{ month|date:"F Y" }}</h2>
-
-  <div class="post_list">
-    {% for post in object_list %}
-      {% include "blog/includes/post_list.html" %}
-    {% endfor %}
-
-  </div>
+<h1 class="filter-title">{% trans "Posts for" %} {{ month|date:"F Y" }}</h1>
+<div class="post-list">
+{% for post in object_list %}
+  {% include "blog/includes/post_list.html" %}
+{% endfor %}
+</div>
 {% endblock %}
