--- a/templates/blog/post_search.html
+++ b/templates/blog/post_search.html
@@ -3,18 +3,18 @@
 
 
 {% block title %}{% trans "Search results for:" %} {{ search_term }} | {{ block.super }}{% endblock %}
-{% block body_class %}{{ block.super }} post_search{% endblock %}
+{% block body_class %}{{ block.super }} post-search{% endblock %}
 
 
 {% block content %}
-  <h2 class="filter-title">{% trans "Search results for:" %} {{ search_term }}</h2>
+  <h1 class="filter-title">{% trans "Search results for:" %} {{ search_term }}</h1>
 
   {% if message %}
   <p class="message">{{ message }}</p>
   {% endif %}
 
   {% if object_list %}
-  <div class="post_list">
+  <div class="post-list">
   {% cache 3600 "blog.post_search.object_list" search_term %}
     {% for post in object_list %}
   {% include "blog/includes/post_detail.html" %}
