--- a/templates/proxy/proxy_search.html
+++ b/templates/proxy/proxy_search.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
+{% load cache i18n %}
 
-
-{% block title %}{{ block.super }}{% endblock %}
-{% block body_class %}{{ block.super }} post_list{% endblock %}
+{% block title %}{% trans "Search results for:" %} {{ search_term }} | {{ block.super }}{% endblock %}
+{% block body_class %}{{ block.super }} post-list{% endblock %}
 
 {% block content_title %}{% endblock %}
 
 {% block content %}
-  <div class="post_list">
+  <h1 class="filter-title">{% trans "Search results for:" %} {{ search_term }}</h1>
+  <div class="post-list">
     {% for object in object_list %}
     {% ifequal object.content_type.name "post" %}
       {% include "proxy/includes/post_item.html" %}
