--- a/templates/proxy/tag_detail.html
+++ b/templates/proxy/tag_detail.html
@@ -2,14 +2,14 @@
 {% load cache i18n smart_if %}
 
 {% block title %}{% trans "Entries for" %} {{ tag.name }} | {{ block.super }}{% endblock %}
-{% block body_class %}{{ block.super }} tag_detail{% endblock %}
-{% block body_id %}tag_{{ tag.id }}{% endblock %}
+{% block body_class %}{{ block.super }} tag-detail{% endblock %}
+{% block body_id %}tag-{{ tag.id }}{% endblock %}
 
 {% block content %}
 
-<h2 class="filter-title">{% trans "Entries tagged:" %} {{ tag.name }}</h2>
+<h1 class="filter-title">{% trans "Entries tagged:" %} {{ tag.name }}</h1>
 
-  <div class="post_list">
+  <div class="post-list">
   {% cache 3600 "mingus.core.tag_detail.object_list" tag.name %}
   {% for object in object_list %}
     {% if object.content_type.name == "post" %}
