--- a/templates/proxy/includes/post_item.html
+++ b/templates/proxy/includes/post_item.html
@@ -1,6 +1,6 @@
 {% load blog tagging_tags inlines oembed_tags pygment_tags %}
 
-<div class="post clearfix">
+<div class="post">
   <div class="date">{{ object.pub_date|date:"M d" }}</div>
   <h2><a href="{{ object.content_object.get_absolute_url }}">{{ object.title }}</a></h2>
   <p class="teaser">{{ object.content_object.tease|safe }}</p>
