added templates for lifestream providers

--- a/templates/lifestream/activity_list.html
+++ b/templates/lifestream/activity_list.html
@@ -6,15 +6,18 @@
 {% block body_class %}lifestream{% endblock %}
 
 {% block content %}
-<div class="post-list">
+<div class="post-list lifestream">
 	{% for object in object_list %}
 	<div class="post {{ object|ls_key:"lifestream:provider" }}">
 		{% timestampdate object as thedate %}
 		{% ifchanged thedate %}
 			<div class="date">{{ object|ls_key:"lifestream:timestamp"|date:"M d" }}</div>
 		{% endifchanged %}
+		{% ls_activity object %}
+		{% comment %}
   		{{ object|ls_key:"lifestream:provider" }} /
 		{{ object|ls_key:"lifestream:source" }}
+		{% endcomment %}
 	</div
 	{% endfor %}
 </div>
