--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
 		<div class="date">{{ latest_post.publish|date:"M d" }}</div>
 		<h3><a href="{{ latest_post.get_absolute_url }}">{{ latest_post.title }}</a></h3>
 		<p class="list-tease">{{ latest_post.tease|safe }}</p>
-		<p class="text">
+		<p class="text-trunc">
 			{{ latest_post.body|safe|striptags|truncatewords:50 }}
 			<a href="{{ latest_post.get_absolute_url }}">continue reading</a>
 		</p>
