added some jquery, some js to twitterify the twitter updates, styling tweaks, ...

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,3 +23,7 @@
 <h2 class="latest-activity">Latest Activity</h2>
 {% latest_activity %}
 {% endblock %}
+
+{% block extra_body %}
+<script type="text/javascript" src="{{ STATIC_URL }}js/rr.home.js"></script>
+{% endblock %}
