--- a/media/static/css/style.css
+++ b/media/static/css/style.css
@@ -84,8 +84,9 @@ h2.latest-activity { border-top: solid 2px #334455; padding:30px 0 0 0; }
 .lifestream .github { background:transparent url(../imgs/logos/github.gif) no-repeat right 5px; }
 .lifestream .twitter { background:transparent url(../imgs/logos/twitter.gif) no-repeat right 5px; }
 .lifestream .twitter span.meta { white-space:nowrap; }
-.lifestream .twitter a.in-reply-to { color:#6699aa; font-weight:normal; font-size:11px; text-decoration:underline; }
-.lifestream .delicious { background:transparent url(../imgs/logos/delicious.gif) no-repeat 480px 0px; }
+.lifestream .twitter a { }
+.lifestream .twitter a.in-reply-to { font-weight:normal; font-size:11px; text-decoration:underline; }
+.lifestream .delicious { background:transparent url(../imgs/logos/delicious.gif) no-repeat 500px 0px; }
 
 /***********************************************
  * forms
