--- a/templates/base.html
+++ b/templates/base.html
@@ -117,7 +117,10 @@
 	    </p>
 	  </div>
   </div>
-<!-- google analtyics -->
+
+<script type="text/javascript" src="{{ STATIC_URL }}js/libs/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/rr.common.js"></script>
+{% block extra_body %}{% endblock %}
 {% cache 7200 "base.analytics" %}
 {% analytics %}
 {% endcache %}
