cleaned up initial_data.json, some markup fixes, ...

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 {% disqus_dev %}
 {% block extra_head %}{% endblock %}
 </head>
-<body id="{% block body_id %}{% endblock %}" class="{% block body_class %}blog{% endblock %}">
+<body id="{% block body_id %}body-id{% endblock %}" class="{% block body_class %}blog{% endblock %}">
   <div id="bleeder"></div>
   <div id="pg">
   {% block body %}
