--- a/templates/lifestream/_activity_list.html
+++ b/templates/lifestream/_activity_list.html
@@ -7,6 +7,6 @@
 			<div class="date">{{ object|ls_key:"lifestream:timestamp"|date:"M d" }}</div>
 		{% endifchanged %}
 		{% ls_activity object %}
-	</div
+	</div>
 	{% endfor %}
 </div>
