bug and markup fixes

--- a/templates/lifestream/_github.html
+++ b/templates/lifestream/_github.html
@@ -1,5 +1,6 @@
 {% load lifestream_tags %}
-<p><a href="{{ object.link }}">{{ object.title }}</a>
+<div class="text">
+<a href="{{ object.link }}">{{ object.title }}</a>
 <a href="{{ object.link }}" class="datetime">{{ object|ls_key:"lifestream:timestamp"|date:"g:iA"|lower }}</a><br />
 {{ object.content|safe }}
-</p>
+</div>
