--- a/templates/lifestream/_twitter.html
+++ b/templates/lifestream/_twitter.html
@@ -1,7 +1,7 @@
 {% load lifestream_tags %}
 <p class="text">{{ object.text}}
 <span class="meta">
-<a class="datetime" href="http://twitter.com/{{ object.user.screen_name }}/status/{{ object.id }}">{{ object|ls_key:"lifestream:timestamp"|date:"g:iA"|lower }}</a>
+<a class="datetime" href="http://twitter.com/{{ object.user.screen_name }}/status/{{ object.id }}">{{ object|ls_key:"lifestream:timestamp"|to_local|date:"g:iA"|lower }}</a>
 {% if object.in_reply_to_status_id %}
 <a href="http://twitter.com/{{ object.in_reply_to_screen_name }}/status/{{ object.in_reply_to_status_id }}" class="in-reply-to">in reply to {{ object.in_reply_to_screen_name }}</a>
 {% endif %}
