i guess inlines dont have context variables?

--- a/templates/inlines/media_photo.html
+++ b/templates/inlines/media_photo.html
@@ -1,5 +1,5 @@
 <div class="post-img">
-<img src="/media/{{ object.photo }}" alt="{{ object.title }}" title="{{ object.title }}">
+<img src="/media/rr/{{ object.photo }}" alt="{{ object.title }}" title="{{ object.title }}">
 {% if object.description %}
 <p>
   {{ object.description }}
