--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -41,11 +41,14 @@
   {% cache 300 "blog.post_detail.tag_list" object.pk %}
   {% tags_for_object object as tag_list %}
   {% if tag_list %}
-  <p class="inline-tag-list"><strong>Tags:</strong>
-    {% for tag in tag_list %}
-    <a href="/tags/{{ tag }}">{{ tag }}</a>{% if not forloop.last %}, {% endif %}
-    {% endfor %}
-  </p>
+  <div class="tags">
+  <h4>Tags:</h4>
+  <ul>
+  {% for tag in tag_list %}
+    <li><a href="/tags/{{ tag }}">{{ tag }}</a></li>
+  {% endfor %}
+  </ul>
+  </div>
   {% endif %}
   {% endcache %}
 
@@ -53,22 +56,22 @@
   {% tagged_get_related object in blog.Post as post_list with num=3 %}
   {% if post_list %}
   <div class="related-posts">
-  <p class="inline-tag-list"><strong>Related posts:</strong></p>
-  <ol>
+  <h4>Related posts:</h4>
+  <ul class="related">
   {% for post in post_list %}
-  <li><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></li>
+  	<li><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></li>
   {% endfor %}
-  </ol>
+  </ul>
   </div>
   {% endif %}
   {% endcache %}
 
-  <div class="subscribe clearfix">
+  <div class="share">
+  	<h4>Share:</h4>
     <ul>
       <li><a href="http://twitter.com/?status=reading: {{ object.title }} - {{ SITE_URL }}{{ object.get_absolute_url }}" target="_blank">{% trans "Twitter this" %}</a></li>
       <li><a href="http://www.reddit.com/submit?title={{ object.title }}&url=http://{{ BLOG_SETTINGS.site.domain }}{{ object.get_absolute_url }}" target="_blank">{% trans "Reddit this" %}</a></li>
       <li><a href="http://delicious.com/save" onclick="window.open('http://delicious.com/save?v=5&amp;noui&amp;jump=close&amp;url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title), 'delicious','toolbar=no,width=550,height=550'); return false;">{% trans "Add to Delicious" %}</a></li>
-      <li><a href="{{ FEED_SUBSCRIBE_RSS }}">{% trans "Subscribe RSS" %}</a></li>
     </ul>
   </div>
   <!-- post -->
