cache the home page for 5mins, its not thaaat fresh

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load lifestream_tags %}
+{% load cache lifestream_tags %}
 
 {% block title %}{{ block.super }}{% endblock %}
 
