--- a/templates/blog/category_list.html
+++ b/templates/blog/category_list.html
@@ -1,7 +1,7 @@
 {% extends "blog/base_blog.html" %}
 {% load i18n %}
 
-{% block title %}Post categories{% endblock %}
+{% block title %}Post categories | {{ block.super }}{% endblock %}
 {% block body_class %}{{ block.super }} category-list{% endblock %}
 
 {% block content %}
