--- a/templates/blog/post_archive_month.html
+++ b/templates/blog/post_archive_month.html
@@ -1,6 +1,11 @@
 {% extends "blog/base_blog.html" %}
 {% load cache i18n %}
 
+{% block title %}{% trans "Posts for" %} {{ month|date:"F Y" }} | {{ block.super }}{% endblock %}
+{% block meta %}
+<meta name="description" content="{% trans "Blog Archive - Posts for" %} {{ month|date:"F Y" }}">
+{% endblock %}
+
 {% block body_class %}{{ block.super }} category-detail{% endblock %}
 {% block body_id %}category-{{ category.id }}{% endblock %}
 
